# veriscope_ml_three

./: .gitignore
veriscope_training/: README.md  pyproject.toml  requirements.txt
veriscope_training/configs/: datasets.yaml  experiments.yaml  models.yaml
veriscope_training/scratch/: test_fusion.py
veriscope_training/scripts/: run_build_dataset.py  run_calibrate_thresholds.py  run_compare_runs.py  run_evaluate_all.py  run_fetch_all_datasets.py  run_fetch_dataset.py  run_train_all.py
veriscope_training/src/veriscope_training/: __init__.py  config.py  logging_utils.py  paths.py
veriscope_training/src/veriscope_training/acquisition/: __init__.py  base.py  fetch_mendeley.py  fetch_openphish.py  fetch_oscar_aux.py  fetch_phishtank.py  fetch_phreshphish.py  fetch_uci_phishing.py  manager.py  validation.py
veriscope_training/src/veriscope_training/adaptive/: __init__.py  drift_monitoring.py  feedback_schema.py  heuristic_proposals.py  retraining_candidates.py
veriscope_training/src/veriscope_training/cli/: __init__.py  main.py
veriscope_training/src/veriscope_training/datasets/: __init__.py  arff.py  base.py  loaders.py  manifest.py  mendeley.py  openphish.py  oscar_aux.py  phishtank.py  phreshphish.py  registry.py  uci_phishing.py
veriscope_training/src/veriscope_training/evaluation/: __init__.py  aggregate.py  calibration.py  error_analysis.py  metrics.py  plots.py  reports.py
veriscope_training/src/veriscope_training/features/: __init__.py
veriscope_training/src/veriscope_training/fusion/: __init__.py  cascade_fusion.py  evaluation.py  weighted_fusion.py
(+34 files in other folders)
