[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veriscope-training"
version = "0.1.0"
description = "Server-side phishing model training and evaluation pipeline for VeriScope."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "beautifulsoup4>=4.12",
  "joblib>=1.3",
  "lxml>=5.2",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "requests>=2.31",
  "scikit-learn>=1.4",
  "tldextract>=5.1",
]

[project.optional-dependencies]
boosting = [
  "lightgbm>=4.3",
  "xgboost>=2.0",
]
polars = [
  "polars>=0.20",
]
transformers = [
  "datasets>=2.19",
  "sentence-transformers>=2.7",
  "torch>=2.2",
  "transformers>=4.40",
]

[project.scripts]
veriscope-training = "veriscope_training.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["veriscope_training*"]
